Реализовано получение геоданных о текущем месте нахождения устройства через класс FusedLocationProviderClient() в стартовом окне (во фрагменте HomePageFragment()).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+
+    // Geolocation
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
