--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     // Dagger
     implementation "com.google.dagger:dagger:2.44.2"
     kapt "com.google.dagger:dagger-compiler:2.44.2"
+
+    // Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
 }
